--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
   "homepage": "https://github.com/Sukshith27/namaste-react#readme",
   "devDependencies": {
     "parcel": "^2.10.0",
-    "process": "^0.11.10"
+    "process": "^0.11.10",
+    "tailwindcss": "^3.3.5"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0"
   },
   "browserslist": [
